--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
       <div class="col-lg-6">
 
-        <img class="img thumbnail center-block" src="liverpoolfc.webp" alt="LIV" width="50%">
+        <img class="img thumbnail center-block" src="liverpoolfc.png" alt="LIV" width="50%">
       </div>
 
       <div class="col-lg-6">
-        <img class="img thumbnail center-block" src="mancity.webp" alt="MANC" width="50%">
+        <img class="img thumbnail center-block" src="mancity.png" alt="MANC" width="50%">
       </div>
     </div>
   </div>
