--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <div class="container">
+  <div class="container-fluid">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
