--- a/portfolio.html
+++ b/portfolio.html
@@ -7,33 +7,33 @@
 
   <!-- Fill in the href to the CSS such that this HTML file can access the CSS -->
   <!-- Don't move the HTML or CSS file. Use Relative Linking -->
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-                <nav class="navbar fixed-top navbar-white bg-white border border-bottom-5">
-                                <div class="container">
-                                    <div id="headerbox">  
-                                      <h1 class="text-white">Shing Chan</h1>
-                                    </div>    
-                                    <h4 class="text-dark">
-                                        <a href="index.html">About</a> |
-                                        <a href="portfolio.html">Portfolio</a> |
-                                        <a href="contact.html">Contact</a>
-                                    </h4>
-                                  </div>
-                              </nav>
+        <nav class="navbar fixed-top navbar-white bg-white border border-bottom-5">
+                <div class="container">
+                    <div id="headerbox">  
+                      <h1 class="text-white">Shing Chan</h1>
+                    </div>    
+                    <h4 class="text-dark">
+                        <a href="index.html">About</a> |
+                        <a href="portfolio.html">Portfolio</a> |
+                        <a href="contact.html">Contact</a>
+                    </h4>
+                  </div>
+              </nav>
 
                               <div class="container">
-                                        <div class="jumbotron bg-white border">
+                                        <div class="jumbotron bg-white border p-3">
                                     <h2 class="display-8">Portfolio</h2>
                                     <hr class="my-4">
                                     <div class="row">
                                             <div class="col-md-6">
                                                         <div class="imgbox m-5">
                                                                         <img class="img-responsive" src="assets/images/p1.jpg" alt="p1">
-                                                                        <div class="carousel-caption">
+                                                                        <div class="text">
                                                                                 <h3>Hangman</h3>
                                                                         </div>
                                                                     </div>
@@ -41,7 +41,7 @@
                                             <div class="col-md-6">
                                                         <div class="imgbox m-5">
                                                                         <img class="img-responsive" src="assets/images/p2.jpg" alt="p1">
-                                                                        <div class="carousel-caption">
+                                                                        <div class="text">
                                                                                 <h3>RPG Game</h3>
                                                                         </div>
                                                                     </div>
@@ -53,7 +53,7 @@
                                                 <div class="col-md-6">
                                                                 <div class="imgbox m-5">
                                                                                 <img class="img-responsive" src="assets/images/p3.jpg" alt="p1">
-                                                                                <div class="carousel-caption">
+                                                                                <div class="text">
                                                                                         <h3>Trivia Game</h3>
                                                                                 </div>
                                                                             </div>
@@ -61,7 +61,7 @@
                                                 <div class="col-md-6">
                                                                 <div class="imgbox m-5">
                                                                                 <img class="img-responsive" src="assets/images/p4.jpg" alt="p1">
-                                                                                <div class="carousel-caption">
+                                                                                <div class="text">
                                                                                         <h3>Rutgers Info Widget</h3>
                                                                                 </div>
                                                                             </div>
@@ -72,7 +72,7 @@
                                                         <div class="col-md-6">
                                                                         <div class="imgbox m-5">
                                                                                         <img class="img-responsive" src="assets/images/p5.jpg" alt="p1">
-                                                                                        <div class="carousel-caption">
+                                                                                        <div class="text">
                                                                                                 <h3>Rock Paper Scissors</h3>
                                                                                         </div>
                                                                                     </div>
